--- a/pom.xml
+++ b/pom.xml
@@ -146,11 +146,11 @@
 	<repositories>
 		<repository>
 			<id>jboss</id>
-			<url>http://repository.jboss.org/maven2/ </url>
+			<url>https://repository.jboss.org/maven2/ </url>
 		</repository>
 		<repository>
 			<id>javanet</id>
-			<url>http://download.java.net/maven/2/</url>
+			<url>https://download.java.net/maven/2/</url>
 		</repository>
 	</repositories>
 
